Fix a layout issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,8 +35,8 @@
         display: none;
     }
 
-    .trigger {
-        float: right;
+    label {
+        display: none;
     }
 
     .menu-icon {
